Attempt to fix verticl alignment of skip button

--- a/src/main/webapp/test/stylesheet.css
+++ b/src/main/webapp/test/stylesheet.css
@@ -45,19 +45,21 @@ html, body {
  * Body Customization:
  */
 
-#tutSkipButton > * {
+#tutSkipButton {
     position: absolute;
-    display: table-cell;
     left: calc(50% - 100px);
     top: calc(50% + 100px);
     width: 200px;
     height: 50px;
     z-index: 11;
     background-color: #F55;
-    color: #FFF;
-    font-size: 20pt;
+}
+#tutSkipText {
+    display: table-cell;
     vertical-align: middle;
     text-align: center;
+    font-size: 20pt;
+    color: #FFF;
 }
 .bodyContent {
     position: relative;
@@ -100,19 +102,19 @@ td {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-tr:last-child td, .tableLastRowRoundBottomLeft td, .tableLastRowRoundBottomRight td {
+tr: last-child td, .tableLastRowRoundBottomLeft td, .tableLastRowRoundBottomRight td {
     border-bottom: none;
 }
 .roundTableTopLeft tr:first-child td:first-child, .roundTableAllCorners tr:first-child td:first-child, .roundTopLeft {
     border-top-left-radius: 10px;
 }
-.roundTableTopRight tr:first-child td:last-child, .roundTableAllCorners tr:first-child td:last-child, .roundTopRight {
+.roundTableTopRight tr:first-child td: last-child, .roundTableAllCorners tr:first-child td: last-child, .roundTopRight {
     border-top-right-radius: 10px;
 }
-.roundTableBottomLeft tr:last-child td:first-child, .roundTableAllCorners tr:last-child td:first-child, .tableLastRowRoundBottomLeft td:first-child, .roundBottomLeft {
+.roundTableBottomLeft tr: last-child td:first-child, .roundTableAllCorners tr: last-child td:first-child, .tableLastRowRoundBottomLeft td:first-child, .roundBottomLeft {
     border-bottom-left-radius: 10px;
 }
-.roundTableBottomRight tr:last-child td:last-child, .roundTableAllCorners tr:last-child td:last-child, .tableLastRowRoundBottomRight td:last-child, .roundBottomRight {
+.roundTableBottomRight tr: last-child td: last-child, .roundTableAllCorners tr: last-child td: last-child, .tableLastRowRoundBottomRight td: last-child, .roundBottomRight {
     border-bottom-right-radius: 10px;
 }
 /**
